--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,2 @@
 GRAPHQL_ENDPOINT="https://www.elkoukii.com/graphql/"
+GRAPHQL_ENDPOINT="https://www.elkoukii.com/search?q=Crescent+Roll+Taco+Bake/graphql/"
